# IntelliRead

./: .gitignore  README.md
.github/workflows/: ci.yml
apps/web/: README.md  eslint.config.js  package-lock.json  package.json  playwright.config.ts
apps/web/e2e/: learning-flow.spec.ts
apps/web/src/: App.tsx  index.css  main.tsx  types.ts
apps/web/src/api/: client.ts  vocabulary.ts
apps/web/src/auth/: AuthProvider.tsx  authContext.ts  authStorage.ts  useAuth.ts
apps/web/src/pages/: DocumentNotesTagsPage.tsx  DocumentReaderPage.tsx  DocumentsPage.tsx  HomePage.tsx  LoginPage.tsx  RegisterPage.tsx  ReviewPage.tsx  VocabularyPage.tsx
apps/web/src/router/: ProtectedRoute.tsx
backend/: .env.example  Cargo.toml  README.md
backend/migrations/: 0001_core.sql  0002_document_features.sql  0003_vocabulary_review.sql
backend/src/: config.rs  error.rs  lib.rs  main.rs  response.rs
backend/src/ai/: mod.rs
backend/src/annotations/: mod.rs
backend/src/auth/: mod.rs
backend/src/database/: mod.rs
backend/src/documents/: mod.rs
backend/src/reading/: mod.rs
backend/src/statistics/: mod.rs
backend/src/tags/: mod.rs
backend/src/vocabulary/: mod.rs
backend/tests/: api_flow.rs
docs/api/: AI_API_USAGE.md  API_DOCUMENTATION.md  ERROR_CODES.md  VOCABULARY_REVIEW_API.md
docs/deployment/: DEPLOYMENT.md
docs/design/: AI_MODULE_DESIGN.md  BACKEND_ARCHITECTURE.md  DATABASE_DESIGN.md  SECURITY_DESIGN.md
docs/testing/: TEST_PLAN.md  TEST_REPORT.md
